Actions
Bug #7905
closedloader: bd_open should check for error from disk_open
Start date:
2017-02-22
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
the bd_open() is missing test if the open_disk() call did succeed or not. This is important as we keep track on opens and the bcache release depends on the correct count.
Updated by Electric Monk over 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit bde4412094f34e2e3709f5b142e28975ef437670
commit bde4412094f34e2e3709f5b142e28975ef437670 Author: Toomas Soome <tsoome@me.com> Date: 2017-02-27T13:32:49.000Z 7905 loader: bd_open should check for error from disk_open Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Marcel Telka <marcel@telka.sk> Approved by: Dan McDonald <danmcd@omniti.com>
Actions