usr/src/boot/sys/boot/i386/libi386/biosdisk.c
@@ -344,6 +344,7 @@ bd_open(struct open_file *f, ...)
 	struct disk_devdesc disk;
 	va_list ap;
 	uint64_t size;
+	int rc;
 
 	va_start(ap, f);
 	dev = va_arg(ap, struct disk_devdesc *);
@@ -381,8 +382,16 @@ bd_open(struct open_file *f, ...)
 		disk_close(&disk);
 	}
 
-	return (disk_open(dev, BD(dev).bd_sectors * BD(dev).bd_sectorsize,
-	    BD(dev).bd_sectorsize));
+	rc = disk_open(dev, BD(dev).bd_sectors * BD(dev).bd_sectorsize,
+	    BD(dev).bd_sectorsize);
+	if (rc != 0) {
+		BD(dev).bd_open--;
+		if (BD(dev).bd_open == 0) {
+			bcache_free(BD(dev).bd_bcache);
+			BD(dev).bd_bcache = NULL;
+		}
+	}
+	return (rc);
 }
 
 static int
